--- a/_posts/2019-07-18-wuyuan.md
+++ b/_posts/2019-07-18-wuyuan.md
@@ -7,7 +7,8 @@ categories: 旅游
 # 景点：
 * 婺源景点:江湾(4A景区)、灵岩洞(4A景区)、大鄣山卧龙谷(4A景区)、文公山(4A景区)、李坑、思溪延村、汪口、百柱宗祠、江岭、彩虹桥、晓起 *10多个景点联票*
 * 其他著名景点：篁岭，月亮湾、漂流。
-* 周边景点：景德镇，三清山，庐山
+* 周边景点：景德镇，三清山，庐山。
+
 # 时间：
 * 每年3月中下旬到4月看油菜花，10-12月婺源赏秋景
 * 石城的红叶，晓起的皇菊，篁岭的晒秋
