--- a/_posts/2019-07-18-wuyuan.md
+++ b/_posts/2019-07-18-wuyuan.md
@@ -152,4 +152,4 @@ categories: 旅游
     每人60块
 
 # 位置分布
-![Alt text](../_images/2019-07-18_10-58-57_cut.png)
+![位置分布]( https://raw.githubusercontent.com/heimlord/heimlord.github.io/master/_images/2019-07-18_10-58-57_cut.png )
