--- a/_posts/2019-07-18-wuyuan.md
+++ b/_posts/2019-07-18-wuyuan.md
@@ -4,17 +4,30 @@ title:  "婺源旅游攻略"
 date:   2019-07-18 09:39:36 +0800
 categories: 旅游
 ---
+# 目录
+* [景点](#景点)
+* [时间](#时间)
+* [景点介绍](#景点介绍)
+* [位置分布](#位置分布)
+* [行程计划](#行程计划)
+
+
+  
+
 # 景点：
 * 婺源景点:江湾(4A景区)、灵岩洞(4A景区)、大鄣山卧龙谷(4A景区)、文公山(4A景区)、李坑、思溪延村、汪口、百柱宗祠、江岭、彩虹桥、晓起 *10多个景点联票*
 * 其他著名景点：篁岭，月亮湾、漂流。
 * 周边景点：景德镇，三清山，庐山。
 
+[返回](#目录)
 # 时间：
 * 每年3月中下旬到4月看油菜花，10-12月婺源赏秋景
 * 石城的红叶，晓起的皇菊，篁岭的晒秋
 
+[返回](#目录)
 # 景点介绍：
-* 婺源江岭：
+## 东线：
+* 婺源江岭：（东线）
   
   * 看油菜花最好就去江岭，有两种看法：
      1. 一种是梯田式的，层层叠叠，高低错落，非常壮观；
@@ -24,7 +37,7 @@ categories: 旅游
      1. 江岭山下有观光车（免费），可以乘坐至一号观光台（最高点）。步行下山至二号观光台，可乘坐观光车（免费）下山，下山后就出了检票口了，若想领略沿途风光，建议步行下山。
      2. 上山顶需要乘坐景区的大巴，最早是早上7点才有大巴。这里是盘山公路，一路观看沿途风景还是很不错的，到山顶后，俯视远方，山下的层层梯田如链似带，高低错落，壮丽雄齐而梯田的四周围绕着青山，与油菜花的金黄、民居的素白构成了一副极美的婺源农村风光画卷。
   * 门票是60元，24小时都有售票的
-* 篁岭古村：
+* 篁岭古村：（东线）
   * 看点：晒秋
     
     在秋收之前，去看婺源篁岭晒秋是最好不过了，这里秋天收获的农作物和瓜果蔬菜特别多，让你看得眼花缭乱，美不可言语，成了篁岭晒秋最美的一道风景线。 在篁岭，一年四季各有所晒，绵延有序，因秋日作物丰盛而被称为“晒秋”。每当日出山头，晨曦映照，整个山间村落饱经沧桑的徽式民居土砖外墙与晒架上、圆圆晒匾里，五彩缤纷丰收果实组合便绘就出世界独一无二的“晒秋”民俗景观。篁岭属于4A景区，这里；；这里秋天就是晒秋的地方，梯田区主要是春天拍摄油菜花的地方，秋天没有人去
@@ -34,8 +47,50 @@ categories: 旅游
    * 门票：
   
       单票：145元/（篁岭成人票+缆车），联票：325元（婺源12点联票+篁岭成人票+缆车）*仅供参考*
+   * 玩法：   
+     1. 乘坐缆车上山，在缆车上观万亩梯田（油菜花季节花海无边，一片黄）。
+     2. 缆车到达后，进行篁岭景区游览，先经过垒心悬索桥，之后到达篁岭古村落（虽然原住民都已经搬迁，但是保存良好商业化气息不严重）。
+     3. 游览天街景点（景区内只有天街食府一家吃饭的地方，价格公道，比县城内贵一点）。
+     4. 之后拍摄晒秋照片，相当壮观（季节性景点）
+     5. 游览结束后搭乘索道下山。
+* 月亮湾：（东线）
+  * 简介：
+   
+    月亮湾是去李坑的路上路过的一个小岛，无需门票，多是摄影爱好者前来采风。清晨五点左右来俯瞰月亮湾是最美的，因为那时晨雾笼于水面上，白墙、黑瓦、金花、绿水在一片朦胧中更加亦幻亦真，宛如一张中国水墨山水画。观赏和拍摄月亮湾的最佳角度在附近的山上，可以从旁边的一条小路上山。山上特意搭建了一个观景台，从观景台望下去，可以看到月亮的月牙完整形状。如果是油菜花开的旺季的话，整个月亮湾染成一片金黄色，非常惊艳。等到日出或日落时，更能一睹其醉人美景。坐上竹筏泛舟湖上的感觉更为悠闲惬意，你甚至还可以尝试自己来划桨，又是另外一番体验。 
+  * 看点： 江心洲如一轮眉月
   
-* 石城村：
+    婺源月亮湾在婺源县东北部秋口镇金盘村附近。婺源月亮湾是因江中有一江心洲如一轮眉月而得名。它依山伴水，水面平静如镜。眼望去一湾湖水如弯月，一弯黄绿的月亮静卧水面，袖珍的小岛，翠绿的湖水，静谧流淌。这里适合早上和黄昏拍摄照片。
+  * 交通：
+  
+    离县城不远，仅仅3公里，可以坐班车或者打车前往，自己开车也可以。但是如果要去观景台拍摄的话，要收15-20块过路费，如果想坐船的话需要30-50块
+    月亮湾的中央还有一些船夫撑着竹筏在招揽客人，价钱大约在10-20元/人左右，可以还价。
+  * 门票：
+    
+    无需门票
+* 李坑：（东线）
+  * 简介：
+  
+    位于婺源县城12公里边上，以李姓聚居为主的古村落，有乌镇的建筑景观，又有兔耳岭怪石景观，是婺源的4A景区，距离县城最近的一个景点。李坑的建筑风格比较独特，属于徽文化古村落，给人一种安静和祥和的感觉。粉墙黛瓦，景色错落有致。有很多美食，比如:李坑炙肉、花菇石鸡、清焖荷包鲤和李坑蒸鸡等等。
+  * 交通：
+    
+    无，任意。
+  * 门票： 
+  
+    每人60块。开放时间 7:30-17:30
+* 晓起村：（东线）
+  * 简介：
+  
+    位于婺源县，多为清代建筑，是典型的徽派古生态民俗文化村，既有周庄的小桥流水，又有香格里拉的宁静悠远，更有古朴纯实的民风民情。建筑风格各具特色，村中小巷均铺青石，曲曲折折，回环如棋局。
+  * 交通：
+  
+    这里离县城约20公里
+  * 门票：
+
+    每人60块
+
+## 北线：
+ 
+* 石城村：（北线）
   
   * 看点：城墙，枫树，秋景
   
@@ -43,17 +98,87 @@ categories: 旅游
   * 门票：
     
     免费，周一至周五（全天开放）。
-
-* 月亮湾：
-  * 看点： 江心洲如一轮眉月
+* 菊径村:（北线）
+  * 简介：
   
-    婺源月亮湾在婺源县东北部秋口镇金盘村附近。婺源月亮湾是因江中有一江心洲如一轮眉月而得名。它依山伴水，水面平静如镜。眼望去一湾湖水如弯月，一弯黄绿的月亮静卧水面，袖珍的小岛，翠绿的湖水，静谧流淌。这里适合早上和黄昏拍摄照片。
+    位于婺源县城边上，菊径村是一个典型的山环水绕的古村落，毗邻国家森林公园灵岩洞和著名的"枫景"摄影地石城。小河呈大半圆形，绕村庄将近一周，四周为高山环绕，站在村对面公路旁山腰上，俯瞰村庄全景，就是一个大大的"圆"形。
+  * 交通：
+    1. 县城直达菊径的班车。
+    2. 驾车直接导航到菊径村。
+  * 门票：
+  
+    不需要门票，观景台拍摄，需要20块钱。
+* 灵岩洞：（北线）
+  * 简介：
+
+    婺源的一个灵岩洞森林公园，集自然与人文景观为一体的风景名胜区，灵岩洞国家森林公园主要分为灵岩洞群景区、石城古树名木景区、生态茶园景区。是4A景区，里面有许多著名的景点。
+  * 交通：
+
+    无
+  * 门票：
+
+    每人50块
+* 思溪延村：（北线）
+  * 简介：
+  
+    位于婺源县思口镇，有明清古建筑，属于古村落。整体色彩效果是黑白相间，给人朴素 淡雅的美感。村落内以青石板铺地，古建群 背靠青山，面临清溪和稻田，四周都是绿地，村庄与秀水青山的 优雅自然风光融为一体。有著名的祠堂，聪听堂、明训堂和余庆堂，古建筑和稻田融为一体，非常的有诗书画意。
+
+  * 交通：
+  * 门票：
+* 彩虹桥：（北线）
+  * 简介：
+  
+    位于婺源清华镇，一种颇有特色的桥——廊桥，所谓廊桥就是一种带顶的桥，这种桥不仅造型优美，最关键的是可在雨天里供行人歇脚。彩虹桥周围景色优美，坐在这里稍作休憩，浏览四周风光，会让人深深体验到婺源之美。适合夏天坐船玩赏。
+  * 交通：
+  * 门票：
+
+    每人60块
+
+## 西线：
+* 鸳鸯湖：
+  * 简介：
+   
+    鸳鸯湖风景区位于婺源县赋春镇，是亚洲较大的野生鸳鸯越冬栖息地。省道景白线横穿景区大门前，距举世闻名的瓷都景德镇41公里；距天下奇山黄山118公里；距世界自然文化遗产三清山118公里；距历史悠久、文风鼎盛的婺源县城43公里，交通十分便利。风景区地处亚热带，属东南季风温暖湿润气候，年平均气温16.6摄氏度，年平均降水量1830毫米，无霜期约251天，全年日照数1868.4小时，是婺源县较早开发的休闲度假、疗养避暑旅游风景区，国家AAAA级旅游景区，江西省自然保护区。
+  * 看点：
+  
+    鸳鸯
+  * 交通：
+    
+    驾车
+  * 门票：
+    门票+游船票，双人88元
+* 文公山：
+  * 简介：
+
+    文公山和鸳鸯湖一样，是婺源西线上的景区之一，包含在婺源风景区通票内。这里原名“九老芙蓉山”，因山上有朱熹的祖墓而改名“文公山”。文公山上林木葱翠，周边是十万亩阔叶林海，有人说“不游文公山，不算到婺源”。西线是婺源良好生态环境的浓缩，看腻了徽派古村和油菜花，走西线亲近自然别有一番滋味。文公山中的主要景点有积庆亭、古驿道、朱熹祖墓、桂花塘、仿竹亭等，山不算高，走起来不会太吃力。从山脚山门牌楼而入，沿山岭是一条始建于宋代的千年古驿道，是古时婺源至饶州的交通要道。古驿道保存完好的有三公里，青石板台阶层层而上，两旁古木成荫，半山腰有一座徽式山亭——积庆亭，两边门额上分别题写“流荫先灵”和“积庆后昆”，是朱熹手笔。沿指示牌行走，可看到朱熹祖墓，墓地坐西北朝东南，据说是一块风水宝地。朱熹曾亲自在祖墓周围按八卦图形栽下24棵杉树，含二十四孝意思，历经800余年，已长成巨杉，可惜现在只剩下十六棵，有“江南南杉王群”之誉。
+  * 看点：
+
+    朱喜墓，游山
+  * 交通：
+
+    驾车
+  * 门票： 
+## 其他：
+* 大鄣山卧龙谷：
+  * 简介：
+
+    位于婺源大鄣山内，也称“三天子鄣”。
+    * 春季看：山花烂漫。
+    * 夏季看：郁郁葱葱。
+    * 秋季看：红枫尽染。
+    * 冬季看：冰雕玉砌。
+  
+    景区四季变换不同的色彩，高山峡谷里瀑布成群。号称“江南第一奇谷”，以雄、险、奇、秀而著称。
+  * 时间：
+  
+    原路上下大概四小时左右。可做缆车。  
   * 交通：
   
-    离县城不远，仅仅3公里，可以坐班车或者打车前往，自己开车也可以。但是如果要去观景台拍摄的话，要收15-20块过路费，如果想坐船的话需要30-50块
+    无
   * 门票：
-    
-    无需门票
+  
+    每人60块，开放时间是8:00-17:00。
+
 * 长溪村：
   * 简介：
   
@@ -67,89 +192,76 @@ categories: 旅游
     
     无需门票。
 
-* 菊径村:
-  * 简介：
-  
-    位于婺源县城边上，菊径村是一个典型的山环水绕的古村落，毗邻国家森林公园灵岩洞和著名的"枫景"摄影地石城。小河呈大半圆形，绕村庄将近一周，四周为高山环绕，站在村对面公路旁山腰上，俯瞰村庄全景，就是一个大大的"圆"形。
-  * 交通：
-    1. 县城直达菊径的班车。
-    2. 驾车直接导航到菊径村。
-  * 门票：
-  
-    不需要门票，观景台拍摄，需要20块钱。
+    *备注：自带手电筒以防天黑*
 
-* 李坑：
-  * 简介：
-  
-    位于婺源县城12公里边上，以李姓聚居为主的古村落，有乌镇的建筑景观，又有兔耳岭怪石景观，是婺源的4A景区，距离县城最近的一个景点。李坑的建筑风格比较独特，属于徽文化古村落，给人一种安静和祥和的感觉。粉墙黛瓦，景色错落有致。有很多美食，比如:李坑炙肉、花菇石鸡、清焖荷包鲤和李坑蒸鸡等等。
-  * 交通：
-    
-    无，任意。
-  * 门票： 
-  
-    每人60块。开放时间 7:30-17:30
-
-* 大鄣山卧龙谷：
-  * 简介：
-
-    位于婺源大鄣山内，也称“三天子鄣”。
-    * 春季看：山花烂漫。
-    * 夏季看：郁郁葱葱。
-    * 秋季看：红枫尽染。
-    * 冬季看：冰雕玉砌。
-  
-    景区四季变换不同的色彩，高山峡谷里瀑布成群。号称“江南第一奇谷”，以雄、险、奇、秀而著称。
-  * 交通：
-  
-    无
-  * 门票：
-  
-    每人60块，开放时间是8:00-17:00。
-
-
-
-* 灵岩洞：
-  * 简介：
-
-    婺源的一个灵岩洞森林公园，集自然与人文景观为一体的风景名胜区，灵岩洞国家森林公园主要分为灵岩洞群景区、石城古树名木景区、生态茶园景区。是4A景区，里面有许多著名的景点。
-  * 交通：
-
-    无
-  * 门票：
-
-    每人50块
-
-
-
-* 思溪延村：
-  * 简介：
-  
-    位于婺源县思口镇，有明清古建筑，属于古村落。整体色彩效果是黑白相间，给人朴素 淡雅的美感。村落内以青石板铺地，古建群 背靠青山，面临清溪和稻田，四周都是绿地，村庄与秀水青山的 优雅自然风光融为一体。有著名的祠堂，聪听堂、明训堂和余庆堂，古建筑和稻田融为一体，非常的有诗书画意。
-
-  * 交通：
-  * 门票：
-
-
-* 彩虹桥：
-  * 简介：
-  
-    位于婺源清华镇，一种颇有特色的桥——廊桥，所谓廊桥就是一种带顶的桥，这种桥不仅造型优美，最关键的是可在雨天里供行人歇脚。彩虹桥周围景色优美，坐在这里稍作休憩，浏览四周风光，会让人深深体验到婺源之美。适合夏天坐船玩赏。
-  * 交通：
-  * 门票：
-
-    每人60块
-
-
-* 晓起村：
-  * 简介：
-  
-    位于婺源县，多为清代建筑，是典型的徽派古生态民俗文化村，既有周庄的小桥流水，又有香格里拉的宁静悠远，更有古朴纯实的民风民情。建筑风格各具特色，村中小巷均铺青石，曲曲折折，回环如棋局。
-  * 交通：
-  
-    这里离县城约20公里
-  * 门票：
-
-    每人60块
-
+[返回](#目录)
 # 位置分布
 ![位置分布]( https://raw.githubusercontent.com/heimlord/heimlord.github.io/master/_images/2019-07-18_10-58-57_cut.png )
+
+[返回](#目录)
+# 行程计划
+* 东线：
+  
+  东线沿途景点：江湾、李坑、汪口、晓起、江岭、庆源。其中江岭是游览油菜花必去景点（季节性景区），江湾和李坑是徽派建筑村落，小桥流水花田下。汪口、晓起及庆源是田园风格，特别是晓起的菊花较为出名，可以购买作为特产。（建议游览江湾、李坑、晓起、江岭）。
+
+  * 详细行程：
+
+    1. 月亮湾：
+       * 游玩指南：月亮湾是从婺源去汪口景区的时候会经过的一个小岛，水面像一个弯弯的月牙，蓝天白云倒映在水中特别好看，时不时会有轻舟游过，这里也是许多摄影发烧友必去的地方。
+       * 游玩时间：建议1-2小时
+       * 开放时间：全天开放
+    2. 汪口
+       * 游玩指南：汪口是一个非常有特色的村落，这里青山环抱、碧波荡漾，景色非常优美，俞氏宗祠是这里的一大看点，雕梁画栋，非常精美大气。
+       * 游玩时间：建议1-2小时
+       * 开放时间：7:30-18:30
+    3. 俞氏宗祠
+       * 游玩指南：汪口村里最有名的就是俞氏宗祠了，这也是来到汪口村的必游之地。祠堂已有上百年历史，内部建筑凡是木质构建都精雕细琢，被誉为“木雕宝库”。在这里可以欣赏到古人卓越的智慧和超凡的创造才能。
+       * 游玩时间：建议0.5小时
+       * 开放时间：3月-9月7:00-18:30；10月-次年2月7:30-18:00，具体开放时间详见景区公示。
+    4. 上下晓起
+       * 游玩指南：这里由上晓起和下晓起两个村子组成，建筑是这里最大的特点，千年古樟树也是这里的一大亮点。在上晓起，可以欣赏到许多明清官宦府邸，其中进士第、荣禄第、大夫第是上晓起的主要参观点。下晓起则以商人宅邸居多，双井印月是这里较为有名的景点。
+       * 游玩时间：建议2小时
+       * 开放时间：7:30-18:30，具体开放时间详见景区公示。
+    5. 江岭景区
+       * 游玩指南：江岭是婺源观看油菜花最佳之地，油菜花梯田非常漂亮，黄黄绿绿的，鳞次栉比，很有感觉。
+       * 游玩时间：建议4小时
+       * 开放时间：7:30-18:30
+* 北线：
+
+  北线沿途景点：思溪延村、彩虹桥、严田、百柱宗祠、菊径村、石城、灵岩洞。北线虽然在整体旅行上是一条线，但是分支较多，建议游览其中的思溪延村、严田、石城。（秋季的石城赏秋相当的出名）
+  * 详细行程：
+    1. 思溪延村
+       * 游玩指南：这里由思溪和延村两个村落组成，出过不少有名的徽商，精湛的徽派老建筑是这里最为出彩的地方。虽然也是粉墙黛瓦，但是与江南的那种古镇又有所不同，特别有意境。
+       * 游玩时间：建议2-3小时
+       * 开放时间：7:30-18:30
+    3. 百柱宗祠
+       * 游玩指南：这座祠堂富有传奇色彩，共是九十九根主柱，相传是为了避天子的讳才谎称为百柱宗祠。这里总体为砖木结构，由庭院、门楼、正堂、后堂、后寝组成，严谨地前后排在一根纵轴线上，精致的木雕，各种精湛的手艺，让人啧啧称奇。
+       * 游玩时间：建议1小时
+       * 开放时间：7:00-17:30
+    4. 大鄣山卧龙谷
+       * 游玩指南：这里是个非常好的生态谷，天然氧吧，景色也不错，绿树奇石小溪，这里的游客也不算多，走走看看拍拍照还是很有味道的，这里还有个瀑布一样的景点，很值得留影。
+       * 游玩时间：建议3-4小时
+       * 开放时间：7:30-18:30，具体开放时间以景区现场公示为准。
+    5. 清华镇
+       * 游玩指南：去完大鄣山卧龙谷就返回清华镇吧，这里的历史非常悠久，镇上有一条主要大街，景色很漂亮，而且这里还有著名的彩虹桥，给人很不错的感觉，晚上的话可以在这里住宿。
+       * 游玩时间：建议2-3小时
+       * 开放时间：全天开放
+    6. 彩虹桥
+       * 游玩指南：这座桥已经有八百多年的历史了，能够保存得这么好也算是少有的了，这里更是被誉为中国最美的长廊桥之一，桥内还设有长凳，可供游人休息。
+       * 游玩时间：建议1小时
+       * 开放时间：7:30-18:30
+    7. 理坑
+       * 游玩指南：同婺源的一些古村一样，理坑村里也是一排排传统的徽派建筑，都是原汁原味的明清古居，古色古香的建筑和如诗如画的景色，让这里成为了婺源摄影和写生的热门地。
+       * 游玩时间：建议2小时
+       * 开放时间：8:00-18:00
+    8. 虹关
+       * 游玩指南：这是一个很漂亮的小村庄，商业气息也不浓郁，当地的居民都很淳朴。进入村内最吸引人注目的就是那棵号称“江南第一樟”的古樟树了。这里还是明清时代享誉全国的“徽墨”产地。
+       * 游玩时间：建议2小时
+       * 开放时间：全天开放    
+* 西线：
+
+  西线沿途景点：文公山、鸳鸯湖。这条线路在整个婺源是比较冷门的，游览人数较少，相当的回归自然，时间充足的情况下可以选择游览，完全大自然景观，清新清肺。
+
+  *备注：以上景点一条线基本游玩时间为一天，请合理安排三天时间。建议油菜花季节必去东线的江岭，其余景点根据时间合理安排。*
+
+[返回](#目录)
