--- a/_posts/2019-07-18-wuyuan.md
+++ b/_posts/2019-07-18-wuyuan.md
@@ -265,3 +265,13 @@ categories: 旅游
   *备注：以上景点一条线基本游玩时间为一天，请合理安排三天时间。建议油菜花季节必去东线的江岭，其余景点根据时间合理安排。*
 
 [返回](#目录)
+# 自驾注意事项
+* 1日游： (东线）县城 – 江岭 – 浙源（平湖、庆源、段辛、官坑、岭脚、虹关）- 清华镇；
+* 2日游： 思溪延村 – 严田 –卧龙谷 – 返程。
+  
+  理由：
+  1. 东线是热门线路，旅行社大巴车多，容易堵车，不适合自驾。所以建议自驾车族从县城北高速出入口走高速驶入江岭高速出入口，下高速，然后进江岭风景区后山山顶停车场。务必8:00之前一定要到达，这样能够很好的避免堵车。
+
+  2. 游览完江岭之后，建议从江岭后山停车场出发，去庆源，再沿浙源公路一路开车游览各个村落的自然风景点。这条新修的柏油公路很顺畅，但弯路很多，务必安全驾驶。
+
+  3. 北线：县城出发至思溪延村，沿途不少自然风景点可驻足观赏拍摄。游览完思溪延村之后，错开容易堵车的彩虹桥风景区，直接去卧龙谷，然后游览严田，路途中有不少自然风景点可以驻足观赏。
