--- a/_posts/2019-07-18-wuyuan.md
+++ b/_posts/2019-07-18-wuyuan.md
@@ -275,3 +275,20 @@ categories: 旅游
   2. 游览完江岭之后，建议从江岭后山停车场出发，去庆源，再沿浙源公路一路开车游览各个村落的自然风景点。这条新修的柏油公路很顺畅，但弯路很多，务必安全驾驶。
 
   3. 北线：县城出发至思溪延村，沿途不少自然风景点可驻足观赏拍摄。游览完思溪延村之后，错开容易堵车的彩虹桥风景区，直接去卧龙谷，然后游览严田，路途中有不少自然风景点可以驻足观赏。
+# 住宿
+* 婺源篁岭晒秋美宿 
+    
+    篁岭风景区，在山上，自驾要爬山路，可以停在山下，索道上山。费用500+。民宿。
+* 在田一陌·婺源明训堂耕读文化体验馆
+
+    在思溪村景区内，费用450+。民宿。
+* 婺源水墨上河酒店
+
+   新开酒店（2019），费用450+。东线，上河景区内。李坑景区边。周边较冷清。
+* 婺源鑫邦开元名都大酒店
+   
+   费用450+，大酒店。各种配套设施。县城附近，偏东线。
+
+* 婺源见外民宿
+
+  三星，家庭套房。内部非旅馆样式。费用700+。北线方向
